--- a/openspasex_server/src/main/resources/templates/openspacex_ui.html
+++ b/openspasex_server/src/main/resources/templates/openspacex_ui.html
@@ -42,8 +42,8 @@
         </div>
     </div>
 
-<!--    <table id="rockets">
-        <thead>SpaceX Rockets</thead>
-    </table>-->
+    <div id="rockets">
+        <h2>SpaceX Rockets</h2>
+    </div>
 </body>
 </html>
