--- a/openspasex_server/src/main/resources/static/openspacex_web.css
+++ b/openspasex_server/src/main/resources/static/openspacex_web.css
@@ -61,6 +61,7 @@ hr.solid {
     width: 81%;
     left: 8%;
     margin-top: 2%;
+    margin-bottom: 2%;
     padding: 2% 2% 2% 2%;
     display: none;
     border-radius: 25px;
